seaqt/QtMultimedia/gen_qcameraexposure.nim


proc fcQCameraExposure_metaObject(self: pointer, ): pointer {.importc: "QCameraExposure_metaObject".}
proc fcQCameraExposure_metacast(self: pointer, param1: cstring): pointer {.importc: "QCameraExposure_metacast".}
proc fcQCameraExposure_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QCameraExposure_metacall".}
proc fcQCameraExposure_tr(s: cstring): struct_miqt_string {.importc: "QCameraExposure_tr".}
proc fcQCameraExposure_trUtf8(s: cstring): struct_miqt_string {.importc: "QCameraExposure_trUtf8".}
proc fcQCameraExposure_isAvailable(self: pointer, ): bool {.importc: "QCameraExposure_isAvailable".}
proc fcQCameraExposure_flashMode(self: pointer, ): cint {.importc: "QCameraExposure_flashMode".}
proc fcQCameraExposure_isFlashModeSupported(self: pointer, mode: cint): bool {.importc: "QCameraExposure_isFlashModeSupported".}
proc fcQCameraExposure_isFlashReady(self: pointer, ): bool {.importc: "QCameraExposure_isFlashReady".}
proc fcQCameraExposure_exposureMode(self: pointer, ): cint {.importc: "QCameraExposure_exposureMode".}
proc fcQCameraExposure_isExposureModeSupported(self: pointer, mode: cint): bool {.importc: "QCameraExposure_isExposureModeSupported".}
proc fcQCameraExposure_exposureCompensation(self: pointer, ): float64 {.importc: "QCameraExposure_exposureCompensation".}
proc fcQCameraExposure_meteringMode(self: pointer, ): cint {.importc: "QCameraExposure_meteringMode".}
proc fcQCameraExposure_isMeteringModeSupported(self: pointer, mode: cint): bool {.importc: "QCameraExposure_isMeteringModeSupported".}
proc fcQCameraExposure_spotMeteringPoint(self: pointer, ): pointer {.importc: "QCameraExposure_spotMeteringPoint".}
proc fcQCameraExposure_setSpotMeteringPoint(self: pointer, point: pointer): void {.importc: "QCameraExposure_setSpotMeteringPoint".}
proc fcQCameraExposure_isoSensitivity(self: pointer, ): cint {.importc: "QCameraExposure_isoSensitivity".}
proc fcQCameraExposure_aperture(self: pointer, ): float64 {.importc: "QCameraExposure_aperture".}
proc fcQCameraExposure_shutterSpeed(self: pointer, ): float64 {.importc: "QCameraExposure_shutterSpeed".}
proc fcQCameraExposure_requestedIsoSensitivity(self: pointer, ): cint {.importc: "QCameraExposure_requestedIsoSensitivity".}
proc fcQCameraExposure_requestedAperture(self: pointer, ): float64 {.importc: "QCameraExposure_requestedAperture".}
proc fcQCameraExposure_requestedShutterSpeed(self: pointer, ): float64 {.importc: "QCameraExposure_requestedShutterSpeed".}
proc fcQCameraExposure_supportedIsoSensitivities(self: pointer, ): struct_miqt_array {.importc: "QCameraExposure_supportedIsoSensitivities".}
proc fcQCameraExposure_supportedApertures(self: pointer, ): struct_miqt_array {.importc: "QCameraExposure_supportedApertures".}
proc fcQCameraExposure_supportedShutterSpeeds(self: pointer, ): struct_miqt_array {.importc: "QCameraExposure_supportedShutterSpeeds".}
proc fcQCameraExposure_setFlashMode(self: pointer, mode: cint): void {.importc: "QCameraExposure_setFlashMode".}
proc fcQCameraExposure_setExposureMode(self: pointer, mode: cint): void {.importc: "QCameraExposure_setExposureMode".}
proc fcQCameraExposure_setMeteringMode(self: pointer, mode: cint): void {.importc: "QCameraExposure_setMeteringMode".}
proc fcQCameraExposure_setExposureCompensation(self: pointer, ev: float64): void {.importc: "QCameraExposure_setExposureCompensation".}
proc fcQCameraExposure_setManualIsoSensitivity(self: pointer, iso: cint): void {.importc: "QCameraExposure_setManualIsoSensitivity".}
proc fcQCameraExposure_setAutoIsoSensitivity(self: pointer, ): void {.importc: "QCameraExposure_setAutoIsoSensitivity".}
proc fcQCameraExposure_setManualAperture(self: pointer, aperture: float64): void {.importc: "QCameraExposure_setManualAperture".}
proc fcQCameraExposure_setAutoAperture(self: pointer, ): void {.importc: "QCameraExposure_setAutoAperture".}
proc fcQCameraExposure_setManualShutterSpeed(self: pointer, seconds: float64): void {.importc: "QCameraExposure_setManualShutterSpeed".}
proc fcQCameraExposure_setAutoShutterSpeed(self: pointer, ): void {.importc: "QCameraExposure_setAutoShutterSpeed".}
proc fcQCameraExposure_flashReady(self: pointer, param1: bool): void {.importc: "QCameraExposure_flashReady".}
proc fcQCameraExposure_connect_flashReady(self: pointer, slot: int, callback: proc (slot: int, param1: bool) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QCameraExposure_connect_flashReady".}
proc fcQCameraExposure_apertureChanged(self: pointer, param1: float64): void {.importc: "QCameraExposure_apertureChanged".}
proc fcQCameraExposure_connect_apertureChanged(self: pointer, slot: int, callback: proc (slot: int, param1: float64) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QCameraExposure_connect_apertureChanged".}
proc fcQCameraExposure_apertureRangeChanged(self: pointer, ): void {.importc: "QCameraExposure_apertureRangeChanged".}
proc fcQCameraExposure_connect_apertureRangeChanged(self: pointer, slot: int, callback: proc (slot: int) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QCameraExposure_connect_apertureRangeChanged".}
proc fcQCameraExposure_shutterSpeedChanged(self: pointer, speed: float64): void {.importc: "QCameraExposure_shutterSpeedChanged".}
proc fcQCameraExposure_connect_shutterSpeedChanged(self: pointer, slot: int, callback: proc (slot: int, speed: float64) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QCameraExposure_connect_shutterSpeedChanged".}
proc fcQCameraExposure_shutterSpeedRangeChanged(self: pointer, ): void {.importc: "QCameraExposure_shutterSpeedRangeChanged".}
proc fcQCameraExposure_connect_shutterSpeedRangeChanged(self: pointer, slot: int, callback: proc (slot: int) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QCameraExposure_connect_shutterSpeedRangeChanged".}
proc fcQCameraExposure_isoSensitivityChanged(self: pointer, param1: cint): void {.importc: "QCameraExposure_isoSensitivityChanged".}
proc fcQCameraExposure_connect_isoSensitivityChanged(self: pointer, slot: int, callback: proc (slot: int, param1: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QCameraExposure_connect_isoSensitivityChanged".}
proc fcQCameraExposure_exposureCompensationChanged(self: pointer, param1: float64): void {.importc: "QCameraExposure_exposureCompensationChanged".}
proc fcQCameraExposure_connect_exposureCompensationChanged(self: pointer, slot: int, callback: proc (slot: int, param1: float64) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QCameraExposure_connect_exposureCompensationChanged".}
proc fcQCameraExposure_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QCameraExposure_tr2".}
proc fcQCameraExposure_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QCameraExposure_tr3".}
proc fcQCameraExposure_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QCameraExposure_trUtf82".}
proc fcQCameraExposure_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QCameraExposure_trUtf83".}
proc fcQCameraExposure_supportedIsoSensitivities1(self: pointer, continuous: ptr bool): struct_miqt_array {.importc: "QCameraExposure_supportedIsoSensitivities1".}
proc fcQCameraExposure_supportedApertures1(self: pointer, continuous: ptr bool): struct_miqt_array {.importc: "QCameraExposure_supportedApertures1".}
proc fcQCameraExposure_supportedShutterSpeeds1(self: pointer, continuous: ptr bool): struct_miqt_array {.importc: "QCameraExposure_supportedShutterSpeeds1".}
proc fcQCameraExposure_protectedbase_sender(self: pointer, ): pointer {.importc: "QCameraExposure_protectedbase_sender".}
proc fcQCameraExposure_protectedbase_senderSignalIndex(self: pointer, ): cint {.importc: "QCameraExposure_protectedbase_senderSignalIndex".}
proc fcQCameraExposure_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QCameraExposure_protectedbase_receivers".}
proc fcQCameraExposure_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QCameraExposure_protectedbase_isSignalConnected".}
proc fcQCameraExposure_staticMetaObject(): pointer {.importc: "QCameraExposure_staticMetaObject".}

proc metaObject*(self: gen_qcameraexposure_types.QCameraExposure, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQCameraExposure_metaObject(self.h), owned: false)

proc metacast*(self: gen_qcameraexposure_types.QCameraExposure, param1: cstring): pointer =
  fcQCameraExposure_metacast(self.h, param1)

proc metacall*(self: gen_qcameraexposure_types.QCameraExposure, param1: cint, param2: cint, param3: pointer): cint =
  fcQCameraExposure_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qcameraexposure_types.QCameraExposure, s: cstring): string =
  let v_ms = fcQCameraExposure_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qcameraexposure_types.QCameraExposure, s: cstring): string =
  let v_ms = fcQCameraExposure_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc isAvailable*(self: gen_qcameraexposure_types.QCameraExposure, ): bool =
  fcQCameraExposure_isAvailable(self.h)

proc flashMode*(self: gen_qcameraexposure_types.QCameraExposure, ): cint =
  cint(fcQCameraExposure_flashMode(self.h))

proc isFlashModeSupported*(self: gen_qcameraexposure_types.QCameraExposure, mode: cint): bool =
  fcQCameraExposure_isFlashModeSupported(self.h, cint(mode))

proc isFlashReady*(self: gen_qcameraexposure_types.QCameraExposure, ): bool =
  fcQCameraExposure_isFlashReady(self.h)

proc exposureMode*(self: gen_qcameraexposure_types.QCameraExposure, ): cint =
  cint(fcQCameraExposure_exposureMode(self.h))

proc isExposureModeSupported*(self: gen_qcameraexposure_types.QCameraExposure, mode: cint): bool =
  fcQCameraExposure_isExposureModeSupported(self.h, cint(mode))

proc exposureCompensation*(self: gen_qcameraexposure_types.QCameraExposure, ): float64 =
  fcQCameraExposure_exposureCompensation(self.h)

proc meteringMode*(self: gen_qcameraexposure_types.QCameraExposure, ): cint =
  cint(fcQCameraExposure_meteringMode(self.h))

proc isMeteringModeSupported*(self: gen_qcameraexposure_types.QCameraExposure, mode: cint): bool =
  fcQCameraExposure_isMeteringModeSupported(self.h, cint(mode))

proc spotMeteringPoint*(self: gen_qcameraexposure_types.QCameraExposure, ): gen_qpoint_types.QPointF =
  gen_qpoint_types.QPointF(h: fcQCameraExposure_spotMeteringPoint(self.h), owned: true)

proc setSpotMeteringPoint*(self: gen_qcameraexposure_types.QCameraExposure, point: gen_qpoint_types.QPointF): void =
  fcQCameraExposure_setSpotMeteringPoint(self.h, point.h)

proc isoSensitivity*(self: gen_qcameraexposure_types.QCameraExposure, ): cint =
  fcQCameraExposure_isoSensitivity(self.h)

proc aperture*(self: gen_qcameraexposure_types.QCameraExposure, ): float64 =
  fcQCameraExposure_aperture(self.h)

proc shutterSpeed*(self: gen_qcameraexposure_types.QCameraExposure, ): float64 =
  fcQCameraExposure_shutterSpeed(self.h)

proc requestedIsoSensitivity*(self: gen_qcameraexposure_types.QCameraExposure, ): cint =
  fcQCameraExposure_requestedIsoSensitivity(self.h)

proc requestedAperture*(self: gen_qcameraexposure_types.QCameraExposure, ): float64 =
  fcQCameraExposure_requestedAperture(self.h)

proc requestedShutterSpeed*(self: gen_qcameraexposure_types.QCameraExposure, ): float64 =
  fcQCameraExposure_requestedShutterSpeed(self.h)

proc supportedIsoSensitivities*(self: gen_qcameraexposure_types.QCameraExposure, ): seq[cint] =
  var v_ma = fcQCameraExposure_supportedIsoSensitivities(self.h)
  var vx_ret = newSeq[cint](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[cint]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = v_outCast[i]
  c_free(v_ma.data)
  vx_ret
